<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    tools:context=".tampilanpencapaian.view.PencapaianActivity">

    <TextView
        android:id="@+id/toolSkor"
        style="@style/Pencapaian"
        android:layout_centerHorizontal="true"
        android:text="@string/skor" />

    <TextView
        android:id="@+id/txtSkor"
        style="@style/Pencapaian"
        android:layout_toEndOf="@+id/toolSkor"
        tools:text="100"
        android:background="#FFEB3B"
        />

    <TextView
        android:id="@+id/toolBenar"
        style="@style/Pencapaian"
        android:layout_below="@+id/toolSkor"
        android:text="@string/benar"
        />

    <TextView
        android:id="@+id/txtBenar"
        style="@style/Pencapaian"
        tools:text="5"
        android:layout_below="@+id/toolSkor"
        android:layout_toEndOf="@+id/toolBenar"
        android:background="#09E412"
        />

    <TextView
        android:id="@+id/toolSalah"
        style="@style/Pencapaian"
        android:layout_toStartOf="@+id/txtSalah"
        android:layout_below="@+id/toolSkor"
        android:text="@string/salah"/>

    <TextView
        android:id="@+id/txtSalah"
        style="@style/Pencapaian"
        android:layout_below="@+id/toolSkor"
        tools:text="0"
        android:background="#DC0E0E"
        android:layout_alignParentEnd="true"
        />


    <TextView
        android:id="@+id/toolTotalSoal"
        style="@style/Pencapaian"
        android:layout_below="@+id/toolBenar"
        android:layout_centerHorizontal="true"
        android:text="@string/soal_5_5"
        />


    <ImageView
        android:id="@+id/btnDottedPencapaian"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/toolTotalSoal"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dotted" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResultPencapaian"
        android:layout_width="match_parent"
        android:background="@color/purple_200"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@+id/btnDottedPencapaian"
        tools:listitem="@layout/items_result"
        />

</RelativeLayout>
