<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tampilankuis.view.TampilanKuisActivity"
    android:orientation="vertical">


      <TextView
          android:id="@+id/txtJenisSoal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/soal_art_seni"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:textSize="22sp"
          android:textColor="@color/black"
          />

    <ImageView
        android:id="@+id/imgDotted"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dotted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJenisSoal" />

    <TextView
        android:id="@+id/toolsSkor"
        android:text="@string/skor"
        style="@style/Soal"
        app:layout_constraintBottom_toTopOf="@+id/toolsWaktu"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted"
        />

    <TextView
        android:id="@+id/txtSkor"
        app:layout_constraintStart_toEndOf="@+id/toolsSkor"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted"
        style="@style/Soal"
        app:layout_constraintBottom_toTopOf="@+id/toolsWaktu"
        android:text="@string/_0"
        />

    <TextView
        android:id="@+id/toolsBenar"
        style="@style/Soal"
        android:text="@string/benar"
        app:layout_constraintEnd_toStartOf="@+id/txtBenar"
        app:layout_constraintStart_toStartOf="@+id/txtJenisSoal"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted" />

    <TextView
        android:id="@+id/txtBenar"
        style="@style/Soal"
        android:text="@string/_0"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted"
        app:layout_constraintStart_toEndOf="@+id/toolsBenar"
        />


    <TextView
        android:id="@+id/txtSalah"
        style="@style/Soal"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/txtWaktu"
        app:layout_constraintStart_toEndOf="@+id/toolsSalah"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted"/>

    <TextView
        android:id="@+id/toolsSalah"
        style="@style/Soal"
        android:text="@string/salah"
        app:layout_constraintBottom_toTopOf="@+id/txtWaktu"
        app:layout_constraintEnd_toStartOf="@+id/txtSalah"
        app:layout_constraintStart_toEndOf="@+id/txtBenar"
        app:layout_constraintTop_toBottomOf="@+id/imgDotted" />

    <TextView
        android:id="@+id/toolsWaktu"
        style="@style/Soal"
        app:layout_constraintTop_toBottomOf="@+id/toolsBenar"
        android:text="@string/exam_5_minutes"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:drawableStart="@drawable/alarm_20"
        app:layout_constraintBottom_toTopOf="@+id/view"
        />

    <TextView
        android:id="@+id/txtWaktu"
        style="@style/Soal"
        android:text="@string/_300_detik"
        android:textAlignment="center"
        android:drawableStart="@drawable/alarm_20"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/toolsWaktu"
        app:layout_constraintTop_toBottomOf="@+id/txtBenar" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF3B3B"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolsWaktu"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:tabTextColor="#FFEB3B"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolsWaktu"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSelesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

